--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -17,7 +17,7 @@
        padding:10px;
        margin-bottom:40px;
         @media screen and (min-width:$breakpoint-l){
-            width:402px;
+            width:100%;
             height: 200px;
             margin-right:10px;
         }
@@ -25,5 +25,6 @@
     &--avatar{
         display: block;
         margin: 0 auto;
+        padding-top:20px;
     }
 }
